--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@angular/platform-browser": "^9.1.2",
     "@angular/platform-browser-dynamic": "^9.1.2",
     "@angular/router": "^9.1.2",
+    "bootstrap": "^4.4.1",
     "core-js": "^3.6.5",
+    "jquery": "1.9.1 - 3",
+    "popper.js": "^1.16.0",
     "rxjs": "^6.5.5",
     "tslib": "^1.11.1",
     "zone.js": "^0.10.3"
