--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/router": "^9.1.2",
     "bootstrap": "^4.4.1",
     "core-js": "^3.6.5",
+    "googleapis": "^49.0.0",
     "jquery": "1.9.1 - 3",
     "popper.js": "^1.16.0",
     "rxjs": "^6.5.5",
