--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "angular",
-  "version": "0.0.0",
+  "name": "ng-gmail-api",
+  "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@angular/animations": "^9.1.2",
@@ -12,10 +12,7 @@
     "@angular/platform-browser": "^9.1.2",
     "@angular/platform-browser-dynamic": "^9.1.2",
     "@angular/router": "^9.1.2",
-    "bootstrap": "^4.4.1",
     "core-js": "^3.6.5",
-    "jquery": "1.9.1 - 3",
-    "popper.js": "^1.16.0",
     "rxjs": "^6.5.5",
     "tslib": "^1.11.1",
     "zone.js": "^0.10.3"
